FireFox - fix `userChrome+Content.icons.change_toolbarbuttons_and_overflowbutton_position`

--- a/FireFox/decoration/panel_button_seperator.css
+++ b/FireFox/decoration/panel_button_seperator.css
@@ -25,12 +25,3 @@ html[id="main-window"][chromehidden=""] #nav-bar:has(toolbarbutton[cui-areatype=
     background-color: rgb(99, 99, 99) !important;
   }
 }
-@media (max-width: 600px) {
-  html[id="main-window"]:not([customizing="true"]) #nav-bar toolbarbutton,
-  html[id="main-window"]:not([customizing="true"]) #nav-bar toolbaritem {
-    transform: translateX(0px) !important;
-  }
-  html[id="main-window"][chromehidden=""] #PanelUI-button::before {
-    transform: translateX(calc(-2 * var(--toolbarbutton-inner-padding) + -2.5 * var(--toolbarbutton-outer-padding) + 16px)) !important;
-  }
-}
